# ntnu-nyhavna-s24

./: .gitignore  README.md  flash.sh
.devcontainer/: devcontainer.dockerfile  devcontainer.json
other cad/: kamera-lidar-gnss v10.f3z  motor-bracket v7.f3d
parsing/: F9PReader.py  IMUReader.py  parse_IMU.py  parse_f9p.py  parser.py  visualization.py
pytools/: run.py  wsl_link.py
pytools/windows/: windows_link.py  wtools.py
tracking-box/: .gitignore  README.md
tracking-box/CAD/: ror-feste v6.f3d  ror-feste v8.f3d  tracker-box-2 v11.f3d
tracking-box/firmware/: CMakeLists.txt
tracking-box/firmware/inc/: battery.h  bmi270.h  bmi270_config.h  sd_utils.h
tracking-box/firmware/src/: battery.cpp  bmi270.cpp  main.cpp  sd_utils.cpp
tracking-box/sd-test/: CMakeLists.txt  flash.sh
tracking-box/sd-test/inc/: battery.h  bmi270.h  clock_config.h  f9p.h  sys_utils.h
tracking-box/sd-test/parsing/: parse_IMU.py
tracking-box/sd-test/src/: battery.cpp  bmi270.cpp  f9p.cpp  hw_config.cpp  main.cpp  sd_utils.cpp
